--- a/Lab5 Decision Trees.ipynb
+++ b/Lab5 Decision Trees.ipynb
@@ -24,7 +24,12 @@
     "With only relatively minor changes the decision tree we make here could also be used for regression as well.\n",
     "\n",
     "![](https://www.wpclipart.com/plants/diagrams/plant_parts/petal_sepal_label.png)\n",
-    "\n"
+    "\n",
+    "\n",
+    "## Reminders\n",
+    "* [GitHub repo](https://github.com/Faur/ITU-Data-Science-in-Games-Exercises)\n",
+    "* **Shut down notebooks** when you are done. Otherwise the server will run out of resources, and we will be forced to restart the them.\n",
+    "* Server storage is volatile! I.e. you must **save everything locally** that you don't want to loose."
    ]
   },
   {
@@ -64,6 +69,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ! git pull"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "## Load the data\n",
     "import numpy as np\n",
     "from sklearn import datasets\n",
@@ -75,44 +89,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(15, 5)\n",
-      "(135, 5)\n",
       "Feature Names: ['sepal length (cm)', 'sepal width (cm)', 'petal length (cm)', 'petal width (cm)']\n",
       "Target Names:  ['setosa' 'versicolor' 'virginica']\n",
       "data\t\t (150, 5)\n",
       "data_test\t (15, 5)\n",
-      "data_train\t (135, 5)\n"
+      "data_train\t (135, 5)\n",
+      "\n",
+      "Example data\n",
+      "[[4.9 3.  1.4 0.2 0. ]\n",
+      " [5.1 3.5 1.4 0.3 0. ]\n",
+      " [4.9 3.1 1.5 0.1 0. ]\n",
+      " [6.4 3.2 4.5 1.5 1. ]\n",
+      " [5.8 2.7 4.1 1.  1. ]\n",
+      " [5.4 3.  4.5 1.5 1. ]\n",
+      " [5.8 2.7 5.1 1.9 2. ]\n",
+      " [7.7 3.8 6.7 2.2 2. ]\n",
+      " [6.1 2.6 5.6 1.4 2. ]]\n"
      ]
     }
    ],
    "source": [
-    "data = np.concatenate([iris.data, iris.target[:,None]], axis=-1)\n",
+    "data = np.concatenate([iris.data, iris.target[:,None]], axis=-1) \n",
     "\n",
     "step_len = 10\n",
     "data_test = data[::step_len,:]\n",
     "np.random.shuffle(data_test)\n",
     "data_train = np.delete(data, [step_len*i for i in range(data_test.shape[0])], axis=0)#.reshape([-1, data.shape[1]])\n",
     "\n",
-    "print(data_test.shape)\n",
-    "print(data_train.shape)\n",
-    "\n",
     "print('Feature Names:', iris.feature_names)\n",
     "print('Target Names: ', iris.target_names)\n",
     "print('data\\t\\t', data.shape)\n",
     "print('data_test\\t', data_test.shape)\n",
-    "print('data_train\\t', data_train.shape)"
+    "print('data_train\\t', data_train.shape)\n",
+    "print()\n",
+    "\n",
+    "print('Example data')\n",
+    "print(data_train[::15,:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -162,37 +186,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task 1: Impurity Measure\n",
-    "\n",
-    "> Estimated time: 10 minutes.\n",
+    "# Impurity Measure\n",
     "\n",
     "The first thing we need to do is to define an impurity measure.\n",
-    "There are a couple of differnet to choose between\n",
+    "There are a couple of different to choose between\n",
     " * https://en.wikipedia.org/wiki/Decision_tree_learning#Metrics\n",
     "\n",
     "For this exercise we will use the Gini impurity (see Wikipedia).\n",
     "The Gini impurity is the probability of picking two different objects when drawing two random samples from the poulation.\n",
     "\n",
-    "Your task is:\n",
-    "1. Lookup the equation for Gini Impurity Metric (e.g. at Wikipedia), and use it to complete the `compute_impurity` function.\n",
-    " * `class_counts` can help you along the way (note that it returns a dictionary)\n",
-    " * Use the **test cell** below to make sure your code runs correctly."
+    "$$\n",
+    "I_G(p) = 1 - \\sum_{i=1} p_i^2\n",
+    "$$\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def compute_impurity(data):\n",
-    "    \"\"\" Calculate the impurity using the Gini Impurity Metric.\n",
-    "        \n",
-    "        Write the function generally, such that it works with different numbers of classes.\n",
-    "    \"\"\"\n",
-    "    # determine number of classes in data (last column)\n",
-    "    \n",
-    "    pass ## YOUR CODE HERE\n"   ]
   },
   {
    "cell_type": "code",
@@ -204,42 +210,42 @@
      "output_type": "stream",
      "text": [
       "compute_impurity(data_class)\t\t 0.6666666666666665\n",
-      "compute_impurity(data_class[:100])\t 0.585\n",
-      "compute_impurity(data_class[:50])\t 0.17999999999999994\n"
+      "compute_impurity(data_class[:90])\t 0.5\n",
+      "compute_impurity(data_class[:45])\t 0.0\n"
      ]
     }
    ],
    "source": [
-    "## Test cell\n",
-    "## When you run this cell you should get the same output as in the next cell.\n",
+    "def compute_impurity(data):\n",
+    "    \"\"\" Calculate the impurity using the Gini Impurity Metric.\n",
+    "        \n",
+    "        Write the function generally, such that it works with different numbers of classes.\n",
+    "    \"\"\"\n",
+    "    # determine number of classes in data (last column)\n",
+    "    label_counts = class_counts(data)\n",
+    "    n = len(data)\n",
+    "    impurity = 1\n",
+    "    for label in label_counts:\n",
+    "        prob_of_label = label_counts[label] / n\n",
+    "        impurity -= prob_of_label**2\n",
+    "    return impurity\n",
+    "\n",
     "print('compute_impurity(data_class)\\t\\t', compute_impurity(data_train))\n",
-    "print('compute_impurity(data_class[:100])\\t', compute_impurity(data_train[:100]))\n",
-    "print('compute_impurity(data_class[:50])\\t', compute_impurity(data_train[:50]))"
+    "print('compute_impurity(data_class[:90])\\t', compute_impurity(data_train[:90]))\n",
+    "print('compute_impurity(data_class[:45])\\t', compute_impurity(data_train[:45]))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Test cell** correct output:\n",
-    "\n",
-    "    compute_impurity(data_class)\t\t 0.6666666666666665\n",
-    "    compute_impurity(data_class[:100])\t 0.585\n",
-    "    compute_impurity(data_class[:50])\t 0.17999999999999994\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Task 2: Branching\n",
-    "\n",
-    "> Estimated time: 20 minutes.\n",
+    "# Task 1: Branching\n",
+    "> Estimated time: 30 minutes.\n",
     "\n",
     "The next thing we need to be able to do is use the impurity measure to split the data.\n",
     "A split is based on a `if-then` rule, here called a `Question`.\n",
     "A question is associated with a coordinate $d\\in \\{1, ..., D\\}$ (what feature are we asking about), and a threshold, $\\theta$.\n",
-    "E.g: if $x_d < \\theta$ go to left child, otherwise go to right child.\n",
+    "* E.g: if $x_d < \\theta$ go to left child, otherwise go to right child.\n",
     "\n",
     "Note that each feature is considered independently - therefore decision trees aren't affected by normalization.\n",
     "\n",
@@ -307,18 +313,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task 3: Best Split\n",
+    "# Task 2: Best Split\n",
     "\n",
-    "> Estimated time: 20 minutes.\n",
+    "> Estimated time: 30 minutes.\n",
     "\n",
     "Now that we know how to split we need to determine where to split!\n",
     "The best split is the one that maximizes the **information gain**, as determiend by the impurity measure.\n",
     "\n",
+    "$$\n",
+    "G_{d,\\theta}(S) = Q(S) - \\frac{|L_{d,\\theta}|}{|S|}Q(L_{d,\\theta}) - \\frac{|R_{d,\\theta}|}{|S|}Q(R_{d,\\theta})\n",
+    "$$\n",
+    "\n",
+    "\n",
     "Your task is to:\n",
     "1. Complete the `find_best_split` function. \n",
+    "\n",
     " * You will need to combine several things: `compute_impurity`, `Question`, `partition`, and `info_gain`.\n",
     " * Hint: Structure your code as a double for-loop such that you examine whether each value for each feature is a good threshold.\n",
-    " * Remember to incorporate the `minimum_size` parameter."
+    "    * Loop through all the features \n",
+    "    * For each value check if this is a good `Question`.\n",
+    "    * Remember to incorporate the `minimum_size` parameter.\n",
+    "    * Return the best information gain, and the question that lead to it. (or `0, None` if no good questions exist)."
    ]
   },
   {
@@ -341,8 +356,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_best_split(rows, minimum_size=5):\n",
+    "def find_best_split(rows, minimum_size=10):\n",
     "    \"\"\" Find the best split by finding the information gain for each possible split.\n",
+    "    \n",
+    "        Returns: best_gain, best_question\n",
     "    \"\"\"\n",
     "    best_gain = 0  # keep track of the best information gain\n",
     "    best_question = None  # keep track of the feature / value that produced it\n",
@@ -355,21 +372,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task 4: Growing Trees\n",
-    "> Estimated time: 30 minutes.\n",
+    "# Growing Trees\n",
     "\n",
     "Now we have all the ingredients to start growing trees.\n",
-    "The section after this has some functions that will run and test your functions.\n",
     "Have a look, and see if that works.\n",
-    "First there are two helper functions that will help you get started.\n",
     "\n",
-    "Your task is to:\n",
-    "1. Complete the `build_tree` function.\n",
-    " * It is suggested to do so using **recursion**.\n",
-    " * Each iteration should create either a `Leaf_Node` or a `Decision_Node`.\n",
-    "1. Complete the `classify` function.\n",
-    " * The function should take **one** observation, and return the predicted class.\n",
-    " * You based on the `Question` decide whether to follow the true-branch or the false-branch until you hit a `Leaf_Node`."
+    "\n",
+    "`build_tree` function is implemented using **recursion**.\n",
+    "Each iteration checks whether we shuold create a `Leaf_Node` (the base case) or it partitions the input date, and recursively calls itself on both partitions.\n",
+    "The result of the recursive function is saved as a `Decision_Node`.\n",
+    "\n",
+    "\n",
+    "`classify` is als implemented with recursion function.\n",
+    "The function takes **one** observation, and return the predicted class, by at each `Decision_Node` asking the `Question`.\n",
+    "Based on the answer follow the true-branch or the false-branch until you hit a `Leaf_Node`."
    ]
   },
   {
@@ -378,8 +394,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Helper functions\n",
-    "\n",
     "class Leaf_Node:\n",
     "    \"\"\" A Leaf_Node classifies data.\n",
     "        This holds a dictionary of class (e.g., \"Apple\") -> number of times\n",
@@ -400,7 +414,7 @@
     "        \n",
     "        self.question = question\n",
     "        self.true_branch = true_branch\n",
-    "        self.false_branch = false_branch\n"
+    "        self.false_branch = false_branch"
    ]
   },
   {
@@ -413,15 +427,41 @@
     "    \"\"\" Builds the tree.\n",
     "    \"\"\"\n",
     "\n",
-    "    pass ## YOUR CODE HERE\n"   ]
+    "    # Find the best split by finding the information gain for each possible split\n",
+    "    gain, question = find_best_split(rows)\n",
+    "\n",
+    "    # Base case: no further info gain\n",
+    "    # Since we can ask no further questions,\n",
+    "    # we'll return a leaf.\n",
+    "    if gain == 0:\n",
+    "        return Leaf_Node(rows)\n",
+    "\n",
+    "    # If we reach here, we have found a useful feature / value\n",
+    "    # to partition on.\n",
+    "    true_rows, false_rows = partition(rows, question)\n",
+    "\n",
+    "    # Recursively build the true branch.\n",
+    "    true_branch = build_tree(true_rows)\n",
+    "\n",
+    "    # Recursively build the false branch.\n",
+    "    false_branch = build_tree(false_rows)\n",
+    "\n",
+    "    # Return a Question node.\n",
+    "    # This records the best feature / value to ask at this point,\n",
+    "    # as well as the branches to follow\n",
+    "    # dependingo on the answer.\n",
+    "    return Decision_Node(question, true_branch, false_branch)\n",
+    "\n",
+    "my_tree = build_tree(data_train)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def classify(row, node):\n",
+    "def classify(row, node, verbose=False):\n",
     "    \"\"\" Recursively search\n",
     "    \"\"\"\n",
     "    \n",
@@ -433,8 +473,7 @@
    "source": [
     "# Visualizing Results\n",
     "\n",
-    "Good job!\n",
-    "Now comes the fun part.\n",
+    "Now comes the fun part!\n",
     "Run the cells below, and interpret the results.\n",
     "\n",
     "Note that the Iris dataset is a quite simple dataset, and you shouldn't expect to get nearly this good results in general."
@@ -442,9 +481,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Is petal width (cm) >= 0.6?\n",
+      "--> True:\n",
+      "|.Is petal width (cm) >= 1.7?\n",
+      "|.--> True:\n",
+      "|.|.Predict {2.0: 40}\n",
+      "|.--> False:\n",
+      "|.|.Is petal length (cm) >= 4.6?\n",
+      "|.|.--> True:\n",
+      "|.|.|.Predict {1.0: 9, 2.0: 4}\n",
+      "|.|.--> False:\n",
+      "|.|.|.Is sepal width (cm) >= 2.5?\n",
+      "|.|.|.--> True:\n",
+      "|.|.|.|.Predict {1.0: 26}\n",
+      "|.|.|.--> False:\n",
+      "|.|.|.|.Predict {1.0: 10, 2.0: 1}\n",
+      "--> False:\n",
+      "|.Predict {0.0: 45}\n"
+     ]
+    }
+   ],
    "source": [
     "def print_tree(node, spacing=\"\"):\n",
     "    \"\"\" World's most elegant tree printing function.\"\"\"\n",
@@ -463,7 +526,9 @@
     "\n",
     "    # Call this function recursively on the false branch\n",
     "    print (spacing + '--> False:')\n",
-    "    print_tree(node.false_branch, spacing + \"|.\")\n"
+    "    print_tree(node.false_branch, spacing + \"|.\")\n",
+    "\n",
+    "print_tree(my_tree)"
    ]
   },
   {
@@ -475,105 +540,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Is petal width (cm) >= 0.6?\n",
-      "--> True:\n",
-      "|.Is petal width (cm) >= 1.7?\n",
-      "|.--> True:\n",
-      "|.|.Predict {2.0: 40}\n",
-      "|.--> False:\n",
-      "|.|.Is petal length (cm) >= 4.9?\n",
-      "|.|.--> True:\n",
-      "|.|.|.Predict {1.0: 2, 2.0: 4}\n",
-      "|.|.--> False:\n",
-      "|.|.|.Is sepal length (cm) >= 5.2?\n",
-      "|.|.|.--> True:\n",
-      "|.|.|.|.Predict {1.0: 39}\n",
-      "|.|.|.--> False:\n",
-      "|.|.|.|.Predict {1.0: 4, 2.0: 1}\n",
-      "--> False:\n",
-      "|.Predict {0.0: 45}\n"
-     ]
-    }
-   ],
-   "source": [
-    "my_tree = build_tree(data_train)\n",
-    "print_tree(my_tree)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Is petal width (cm) >= 0.6? True\n",
       "Is petal width (cm) >= 1.7? True\n",
       "Actual: 2.0. Predicted: {2.0: '100%'}\n",
       "\n",
       "Is petal width (cm) >= 0.6? True\n",
       "Is petal width (cm) >= 1.7? False\n",
-      "Is petal length (cm) >= 4.9? False\n",
-      "Is sepal length (cm) >= 5.2? True\n",
-      "Actual: 1.0. Predicted: {1.0: '100%'}\n",
+      "Is petal length (cm) >= 4.6? True\n",
+      "Actual: 1.0. Predicted: {1.0: '69%', 2.0: '30%'}\n",
       "\n",
       "Is petal width (cm) >= 0.6? True\n",
       "Is petal width (cm) >= 1.7? False\n",
-      "Is petal length (cm) >= 4.9? False\n",
-      "Is sepal length (cm) >= 5.2? True\n",
-      "Actual: 1.0. Predicted: {1.0: '100%'}\n",
+      "Is petal length (cm) >= 4.6? False\n",
+      "Is sepal width (cm) >= 2.5? False\n",
+      "Actual: 1.0. Predicted: {1.0: '90%', 2.0: '9%'}\n",
       "\n",
-      "Is petal width (cm) >= 0.6? True\n",
-      "Is petal width (cm) >= 1.7? True\n",
-      "Actual: 2.0. Predicted: {2.0: '100%'}\n",
-      "\n",
-      "Is petal width (cm) >= 0.6? True\n",
-      "Is petal width (cm) >= 1.7? False\n",
-      "Is petal length (cm) >= 4.9? False\n",
-      "Is sepal length (cm) >= 5.2? False\n",
-      "Actual: 1.0. Predicted: {1.0: '80%', 2.0: '20%'}\n",
-      "\n",
-      "Is petal width (cm) >= 0.6? False\n",
-      "Actual: 0.0. Predicted: {0.0: '100%'}\n",
-      "\n",
-      "Is petal width (cm) >= 0.6? False\n",
-      "Actual: 0.0. Predicted: {0.0: '100%'}\n",
-      "\n",
-      "Is petal width (cm) >= 0.6? True\n",
-      "Is petal width (cm) >= 1.7? False\n",
-      "Is petal length (cm) >= 4.9? False\n",
-      "Is sepal length (cm) >= 5.2? True\n",
-      "Actual: 1.0. Predicted: {1.0: '100%'}\n",
-      "\n",
-      "Is petal width (cm) >= 0.6? False\n",
-      "Actual: 0.0. Predicted: {0.0: '100%'}\n",
-      "\n",
-      "Is petal width (cm) >= 0.6? True\n",
-      "Is petal width (cm) >= 1.7? True\n",
-      "Actual: 2.0. Predicted: {2.0: '100%'}\n",
-      "\n",
-      "Is petal width (cm) >= 0.6? True\n",
-      "Is petal width (cm) >= 1.7? True\n",
-      "Actual: 2.0. Predicted: {2.0: '100%'}\n",
-      "\n",
-      "Is petal width (cm) >= 0.6? True\n",
-      "Is petal width (cm) >= 1.7? True\n",
-      "Actual: 1.0. Predicted: {2.0: '100%'}\n",
-      "\n",
-      "Is petal width (cm) >= 0.6? True\n",
-      "Is petal width (cm) >= 1.7? True\n",
-      "Actual: 2.0. Predicted: {2.0: '100%'}\n",
-      "\n",
-      "Is petal width (cm) >= 0.6? False\n",
-      "Actual: 0.0. Predicted: {0.0: '100%'}\n",
-      "\n",
-      "Is petal width (cm) >= 0.6? False\n",
-      "Actual: 0.0. Predicted: {0.0: '100%'}\n",
-      "\n"
+      "Accuracy: 0.9333333333333333\n"
      ]
     }
    ],
@@ -586,10 +568,19 @@
     "        probs[lbl] = str(int(counts[lbl] / total * 100)) + \"%\"\n",
     "    return probs\n",
     "\n",
+    "acc = 0\n",
     "for row in data_test:\n",
-    "    print (\"Actual: %s. Predicted: %s\" %\n",
-    "           (row[-1], print_leaf(classify(row, my_tree))))\n",
-    "    print()\n"
+    "    if acc >= 3:\n",
+    "        pred = classify(row, my_tree, False)\n",
+    "    else:\n",
+    "        pred = classify(row, my_tree, True)\n",
+    "        print (\"Actual: %s. Predicted: %s\" % (row[-1], print_leaf(pred)))\n",
+    "        print()\n",
+    "\n",
+    "    if row[-1] in pred:\n",
+    "        acc += 1\n",
+    "\n",
+    "print('Accuracy:', acc/data_test.shape[0])"
    ]
   },
   {
@@ -599,6 +590,13 @@
     "## Credits\n",
     "This notebook is made heavily inspired and borrowing from: [Google Developers: Machine Learning Recipes #8](https://www.youtube.com/watch?v=LDRbO9a6XPU) ([source code](https://github.com/random-forests/tutorials/)).\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
