--- a/development/Lab3 Association Mining.ipynb
+++ b/development/Lab3 Association Mining.ipynb
@@ -96,7 +96,7 @@
    "outputs": [],
    "source": [
     "# Check that data and data path is present\n",
-    "data_folder = \"../data/\"\n",
+    "data_folder = \"./data/\"\n",
     "data_filename = \"shopping.json\"\n",
     "assert os.path.isdir(data_folder) and os.path.exists(data_folder + data_filename), 'Data not found. Make sure to have the most recent version!'\n",
     "\n",
