--- a/development/Lab7 Dense Networks.ipynb
+++ b/development/Lab7 Dense Networks.ipynb
@@ -28,9 +28,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "pycharm": {}
+        "pycharm": {
+          "is_executing": false
+        }
       },
       "outputs": [],
       "source": [
